# myapp

./: .gitignore  CMakeLists.txt  README.md
lib/shape/: CMakeLists.txt
lib/shape/include/: rectangle.h  shape.h
lib/shape/src/: rectangle.cpp  shape.cpp
src/: main.cpp
